--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="form-group">
   <label class="control-label">Currency Text Box</label> 
-  <input class="form-control" type="number" placeholder="Enter Amount"/>
+  <input currency-directive class="form-control" type="text" placeholder="Enter Amount"/>
 </div>
